--- a/packages/businessData/tsconfig.json
+++ b/packages/businessData/tsconfig.json
@@ -1,13 +1,23 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "dist"
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
+    "composite": true,
+    "outDir": "dist",
+    "rootDir": "src",
+    "noEmit": false
   },
   "include": [
-    "./**/*.ts"
+    "src"
   ],
-  "exclude": [
-    "node_modules",
-    "dist"
+  "references": [
+    {
+      "path": "../basicData"
+    },
+    {
+      "path": "../dataStructure"
+    }
   ]
 }
