--- a/packages/dataStructure/tsconfig.json
+++ b/packages/dataStructure/tsconfig.json
@@ -1,14 +1,20 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "dist"
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
+    "composite": true,
+    "outDir": "dist",
+    "rootDir": "src",
+    "noEmit": false
   },
   "include": [
-    "./**/*.ts",
-    "../basic_data/HasIdDTO.ts"
+    "src"
   ],
-  "exclude": [
-    "node_modules",
-    "dist"
+  "references": [
+    {
+      "path": "../basicData"
+    }
   ]
 }
