--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "lerna": "^6.4.0"
   },
   "scripts": {
-    "build:basicData": "yarn workspace @iagows/basic-data build",
-    "build:businessData": "yarn workspace @iagows/business-data build",
+    "build:basic": "yarn workspace @iagows/basic-data build",
+    "build:business": "yarn workspace @iagows/business-data build",
     "build:components": "yarn workspace @iagows/components build",
-    "build:dataStructure": "yarn workspace @iagows/data-structure build",
-    "build": "yarn run build:basicData && yarn run build:dataStructure && yarn run build:businessData && yarn run build:components"
+    "build:structure": "yarn workspace @iagows/data-structure build",
+    "build": "yarn run build:basic && yarn run build:structure && yarn run build:business && yarn run build:components"
   }
 }
