--- a/packages/basicData/tsconfig.json
+++ b/packages/basicData/tsconfig.json
@@ -5,11 +5,11 @@
     "declarationMap": true,
     "sourceMap": true,
     "composite": true,
-    "outDir": "dist",
+    "outDir": "./dist",
     "rootDir": "src",
     "noEmit": false
   },
   "include": [
-    "src"
+    "./src"
   ]
 }
