--- a/packages/businessData/tsconfig.json
+++ b/packages/businessData/tsconfig.json
@@ -5,19 +5,22 @@
     "declarationMap": true,
     "sourceMap": true,
     "composite": true,
-    "outDir": "dist",
+    "outDir": "./dist",
     "rootDir": "src",
     "noEmit": false
   },
   "include": [
     "src"
   ],
+  "exclude": [
+    "dist/*"
+  ],
   "references": [
     {
-      "path": "../basicData"
+      "path": "../basicData/",
     },
     {
-      "path": "../dataStructure"
+      "path": "../dataStructure/"
     }
   ]
 }
