--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -38,6 +38,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "@iagows/basic-data": "*",
+    "@iagows/data-structure": "*",
+    "@iagows/business-data": "*",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
