--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -5,7 +5,7 @@
     "declarationMap": true,
     "sourceMap": true,
     "composite": false,
-    "outDir": "dist",
+    "outDir": "./dist",
     "rootDir": "src",
     "noEmit": false
   },
